--- a/index.html
+++ b/index.html
@@ -1644,56 +1644,56 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">Android Studio</div>
-          <img src="http://www.mauriziominieri.it/loghi/logo_androidstudio.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-android-studio.png"/>
       </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Atom</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-atom.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-atom.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Code Blocks</div>
-        <img src="http://www.mauriziominieri.it/loghi/logo_codeblock.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-codeblock.png"/>
     </a>
     </li>
     <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">Dev C++</div>
-        <img src="http://www.mauriziominieri.it/loghi/logo_devcpp.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-devcpp.png"/>
       </a>
     </li>
     <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">Xcode</div>
-        <img src="http://www.mauriziominieri.it/loghi/icon_xcode.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-xcode.png"/>
       </a>
     </li>
     <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Netbeans</div>
-      <img src="http://www.mauriziominieri.it/loghi/logo_netbeans.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-netbeans.png"/>
     </a>
     </li>
     <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">Visual Studio</div>
-        <img src="http://www.mauriziominieri.it/loghi/logo_visualstudio.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-visualstudio.png"/>
       </a>
     </li>
     <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">Visual Studio Code</div>
-        <img src="http://www.mauriziominieri.it/loghi/icon_vscode.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-vscode.png"/>
       </a>
     </li>
 
@@ -1728,42 +1728,42 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">Gitlab</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-gitlab.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-gitlab.png"/>
         </a>
       </li>
       <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">Dropbox</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-dropbox.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-dropbox.png"/>
         </a>
       </li>
       <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">iCloud Drive</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-icloud.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-icloud.png"/>
         </a>
       </li>
       <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">Google Drive</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-google-drive.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icons/icon-google-drive.png"/>
         </a>
       </li>
       <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">Mega Drive</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-mega.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icons/icon-mega.png"/>
         </a>
       </li>
       <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">One Drive</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-one-drive.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icons/icon-one-drive.png"/>
         </a>
       </li>
 
@@ -1798,47 +1798,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
-        href="https://it.wikipedia.org/wiki/Unity_(motore_grafico)" target="_blank">
+        href="https://it.wikipedia.org" target="_blank">
         <div class="cards-grid__item-heading is-7">C</div>
         <!--<svg class="icon--svg cards-grid__item-icon" aria-hidden="true">
           <use xlink:href="#ico-c"></use>
         </svg>-->
-        <img src="http://www.mauriziominieri.it/loghi/logo_c.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-c.png"/>
       </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
-      href="https://it.wikipedia.org/wiki/Unity_(motore_grafico)" target="_blank">
+      href="https://it.wikipedia.org" target="_blank">
       <div class="cards-grid__item-heading is-7">C++</div>
-      <img src="http://www.mauriziominieri.it/loghi/logo_cpp.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-cpp.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
-      href="https://it.wikipedia.org/wiki/Unity_(motore_grafico)" target="_blank">
+      href="https://it.wikipedia.org" target="_blank">
       <div class="cards-grid__item-heading is-7">C Sharp</div>
-      <img src="http://www.mauriziominieri.it/loghi/logo_csharp.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-csharp.png"/>
     </a>
     </li>
     <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">Java</div>
-        <img src="http://www.mauriziominieri.it/loghi/logo_java.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-java.png"/>
       </a>
     </li>
     <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">Java Script</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-java-script.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-java-script.png"/>
       </a>
     </li>
     <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Script</div>
-        <img src="  http://www.mauriziominieri.it/loghi/logo_scriptlanguage.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-scriptlanguage.png"/>
 
     </a>
     </li>
@@ -1846,7 +1846,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">Swift</div>
-        <img src="http://www.mauriziominieri.it/loghi/icon_swift.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-swift.png"/>
       </a>
     </li>
     <li class="cards-grid__item">
@@ -1862,7 +1862,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a class="cards-grid__item-wrapper"
         href="https://www.google.it" target="_blank">
         <div class="cards-grid__item-heading is-7">Python</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-python.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-python.png"/>
       </a>
     </li>
   </ul>
@@ -1894,21 +1894,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">HTML</div>
-        <img src="http://www.mauriziominieri.it/loghi/logo_html.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-html.png"/>
       </a>
       </li>
       <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">CSS</div>
-          <img src="http://www.mauriziominieri.it/loghi/logo_css.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-css.png"/>
       </a>
       </li>
       <li class="cards-grid__item">
       <a class="cards-grid__item-wrapper"
         href="" target="_blank">
         <div class="cards-grid__item-heading is-7">PHP</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-php.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-php.png"/>
       </a>
       </li>
 
@@ -1943,14 +1943,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a class="cards-grid__item-wrapper"
             href="" target="_blank">
             <div class="cards-grid__item-heading is-7">Bootstrap</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-bootstrap.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-bootstrap.png"/>
           </a>
         </li>
         <li class="cards-grid__item">
           <a class="cards-grid__item-wrapper"
             href="" target="_blank">
             <div class="cards-grid__item-heading is-7">Android OS</div>
-            <img src="http://www.mauriziominieri.it/loghi/logo_android.png"/>
+            <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-android.png"/>
           </a>
         </li>
       <li class="cards-grid__item">
@@ -1975,14 +1975,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">UIKit</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-uikit.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-uikit.png"/>
         </a>
       </li>
       <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">SwiftUI</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-swiftui.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-swiftui.png"/>
         </a>
       </li>
       <li class="cards-grid__item">
@@ -2024,21 +2024,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">MySql</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-mysql.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-mysql.png"/>
         </a>
         </li>
         <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">Oracle</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-oracle.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-oracle.png"/>
         </a>
         </li>
         <li class="cards-grid__item">
         <a class="cards-grid__item-wrapper"
           href="" target="_blank">
           <div class="cards-grid__item-heading is-7">Heidi SQL</div>
-            <img src="http://www.mauriziominieri.it/loghi/logo_heidisql.png"/>
+            <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-heidisql.png"/>
         </a>
         </li>
 
