--- a/index.html
+++ b/index.html
@@ -3091,7 +3091,7 @@ data-ca-label="tv">
       <circle class="circle" cx="50" cy="50" r="20"></circle>
       <circle style="--duration: 7.21s" class="bar" cx="50" cy="50" r="20"></circle>
     </svg>
-    <span class="tab-timer__label">PRIMO</span>
+    <span class="tab-timer__label">Apple</span>
   </button>
 
   <button class="tab-timer__button is-7"
@@ -3106,7 +3106,7 @@ data-ca-label="tv">
       <circle class="circle" cx="50" cy="50" r="20"></circle>
       <circle style="--duration: 6.28s" class="bar" cx="50" cy="50" r="20"></circle>
     </svg>
-    <span class="tab-timer__label">SECONDO</span>
+    <span class="tab-timer__label">Windows</span>
   </button>
 
   <button class="tab-timer__button is-7"
@@ -3121,7 +3121,7 @@ data-ca-label="tv">
       <circle class="circle" cx="50" cy="50" r="20"></circle>
       <circle style="--duration: 8.21s" class="bar" cx="50" cy="50" r="20"></circle>
     </svg>
-    <span class="tab-timer__label">TERZO</span>
+    <span class="tab-timer__label">Google</span>
   </button>
   </div>
   </div>
@@ -3171,7 +3171,7 @@ data-ca-label="tv">
               data-c-video-preload>
               <div class="hidden">
               <div id="transcript-q-gesture-nav-go-back-dark">
-                <p>Go back</p>
+                <p>Apple</p>
               </div>
               </div>
               </video>
@@ -3204,7 +3204,7 @@ data-ca-label="tv">
               data-c-video-preload>
               <div class="hidden">
               <div id="transcript-q-gesture-nav-go-back-light">
-                <p>Go back</p>
+                <p>Apple</p>
               </div>
               </div>
               </video>
@@ -3253,7 +3253,7 @@ data-ca-label="tv">
               data-c-video-preload>
               <div class="hidden">
               <div id="transcript-q-gesture-nav-go-home-dark">
-                <p>Go home</p>
+                <p>Windows</p>
               </div>
               </div>
               </video>
@@ -3286,7 +3286,7 @@ data-ca-label="tv">
               data-c-video-preload>
               <div class="hidden">
               <div id="transcript-q-gesture-nav-go-home-light">
-                <p>Go home</p>
+                <p>Windows</p>
               </div>
               </div>
               </video>
@@ -3336,7 +3336,7 @@ data-ca-label="tv">
                 data-c-video-preload>
                 <div class="hidden">
                 <div id="transcript-q-gesture-nav-assistant-dark">
-                  <p>Pull up Assistant</p>
+                  <p>Google</p>
                 </div>
                 </div>
                 </video>
@@ -3369,7 +3369,7 @@ data-ca-label="tv">
                 data-c-video-preload>
                 <div class="hidden">
                 <div id="transcript-q-gesture-nav-assistant-light">
-                  <p>Pull up Assistant</p>
+                  <p>Google</p>
                 </div>
                 </div>
                 </video>
@@ -3412,7 +3412,7 @@ data-ca-label="tv">
 
 
               </span>
-              <h3 class="content-multimedia__heading is-3 is-heading">Gesture Navigation1</h3>
+              <h3 class="content-multimedia__heading is-3 is-heading">Ispirazione</h3>
               <div class="content-multimedia__body is-body-wrapper">      <div class="accordion accordion--is-1"
                role="tablist"
                aria-multiselectable="true"
@@ -3434,7 +3434,7 @@ data-ca-label="tv">
 
                 >
 
-                  <h3>Get around with a swipe and a pull.</h3><svg class="icon--svg accordion__item-toggle" aria-hidden="true">
+                  <h3>I tre colossi.</h3><svg class="icon--svg accordion__item-toggle" aria-hidden="true">
               <use xlink:href="#ico-arrow-round"></use>
               </svg></button>
               </div>
@@ -3445,7 +3445,10 @@ data-ca-label="tv">
               aria-labelledby="q-gesture-navigation-featured-accordion_1"
               aria-expanded="false">
               <div class="accordion__item-content">
-                <p>Gestures are now quicker and more intuitive than ever. Go backwards and forwards, pull up the homescreen and swipe up to see your open apps. All super smooth.</p>
+                <p>
+                 Queste tre aziende informatiche mi hanno profondamente ispirato durante tutta la mia vita.
+                 Sono affascinato dallo stile della apple, dalla customizzazione di windows e dalla semplicità di Google.
+                </p>
               </div>
               </div>
               </div>
@@ -3454,13 +3457,6 @@ data-ca-label="tv">
               </div>
 
                 </div>
-
-
-
-
-
-
-
 
 
   </div>
@@ -3485,9 +3481,9 @@ data-ca-label="tv">
     <div class="o-container">
       <div class="l-section__intro">
         <h2 class="cta-grid__copy-item text-large">Guarda i miei progetti</h2>
-        <p class="cta-grid__copy-item text-normal">Seleziona un device per vedere il progetto fatto in <span class="text-nowrap">quella categoria.</span></p>
+        <p class="cta-grid__copy-item text-normal">Seleziona un dispositivo per vedere i progetti di quella categoria</p>
         <h3 id="apps-carousel__title" class="u-is-hidden-visually">Apps Carousel</h3>
-        <p id="apps-carousel__description" class="u-is-hidden-visually">Sfoglia una selezione di app Android che puoi utilizzare per rendere unici telefoni, tablet, dispositivi indossabili, console per auto e televisori Android. Utilizza i pulsanti Indietro e Avanti o le frecce della tastiera per cambiare l'elemento visualizzato.</p>
+        <p id="apps-carousel__description" class="u-is-hidden-visually">Sfoglia i telefoni, tablet, dispositivi indossabili, console e computer. Utilizza i pulsanti Indietro e Avanti o le frecce della tastiera per cambiare l'elemento visualizzato.</p>
       </div>
 
 
@@ -3701,7 +3697,7 @@ data-ca-label="tv">
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://play.google.com/store/apps/details?id=com.duolingo" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Duolingo">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/duolingo_1x.png">
+                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/duolingo_1x.png" >
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                             EasyTicket Client
@@ -4279,12 +4275,12 @@ data-ca-label="tv">
                   <div class="apps-carousel__item apps-carousel__item--tv">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
-                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
+                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
+                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                             Graph
@@ -4296,12 +4292,12 @@ data-ca-label="tv">
                   <div class="apps-carousel__item apps-carousel__item--tv">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
-                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
+                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
+                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                             Highway Project
@@ -4313,12 +4309,12 @@ data-ca-label="tv">
                   <div class="apps-carousel__item apps-carousel__item--tv">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
-                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
+                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
+                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                             Programming Composer
@@ -4330,12 +4326,12 @@ data-ca-label="tv">
                   <div class="apps-carousel__item apps-carousel__item--tv">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
-                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
+                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
+                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                             Dashboard
@@ -4347,12 +4343,12 @@ data-ca-label="tv">
                   <div class="apps-carousel__item apps-carousel__item--tv">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
-                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
+                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_1x.jpg" srcset="https://www.android.com/static/2016/img/apps-carousel/tv-netflix_2x.jpg 2x" />
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://play.google.com/store/apps/details?id=com.netflix.mediaclient" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Netflix">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
+                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_1x.png" srcset="https://www.android.com/static/2016/img/apps-carousel/icons/netflix_2x.png 2x">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                             UIL Scuola Napoli
@@ -4391,7 +4387,7 @@ data-ca-label="tv">
 
 
 
-<!--INIZIO DISPOSITIVI-->
+<!--INIZIO carousel macchine-->
 <!--
   <section class="l-section u-bg-my-white u-push-top" id="section-browse"
            data-c-tracking-section data-tracking-name="device-carousel">
